...
    <string name="people_play_reason_disconnect">Player disconnected</string>
    <string name="people_play_reason_desync">Snapshots differed</string>
    <string name="people_events_title">Explore Events</string>
    <string name="people_events_supporting">Discover Othello events and activities</string>
    <string name="people_social_title">Connect</string>
    <string name="people_social_supporting">Share when you might play</string>
    <string name="chanriva_name_selection_title">Choose your Chanriva name</string>
    <string name="chanriva_name_selection_supporting">This name will be shown in matches and social features.</string>
    <string name="chanriva_name_selection_reroll_available">You can redraw one more time.</string>
    <string name="chanriva_name_selection_rerolled">Redraw already used.</string>
    <string name="chanriva_name_selection_rare">Rare</string>
    <string name="chanriva_name_selection_reroll">Redraw once</string>
    <string name="chanriva_name_selection_reroll_used">Redraw used</string>
    <string name="chanriva_name_selection_confirm">Use this name</string>
    <string name="play_profile_network_error">Your connection is unstable. Please try again in a moment.</string>
    <string name="switch_to_advanced_mode">Switch to Advanced mode</string>
    <string name="feature_coming_soon">This feature is coming soon.</string>
    <string name="back_to_standard_home">Back to Home</string>
    <string name="play">Play</string>
    <string name="study">Review</string>
...
